@@ -22,6 +22,36 @@
   
     <tr>
       <td>  </td>
+      <td class="littledate">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-c6f19ea6617d8186461181296226988ae7111708.html">Numerical indices default to position=free.</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
+      <td class="littledate">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-d3968c05090854806ec986d696e99a887d458b18.html">Fix dependence on numbers</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
       <td class="littledate">2009-11-16</td>
       <td class="issuename">
         <a href="issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.html">Deleting last cell of notebook sometimes produces warnings</a>
@@ -38,7 +68,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img alt="fixed" src="green-check.png" title="fixed"/> </td>
       <td class="littledate">2009-11-16</td>
       <td class="issuename">
         <a href="issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.html">Printing problem with \commutator</a>
