@@ -24,11 +24,11 @@
         </td>
         <td>
         
-          <span class='progress-meter'><span class='progress-meter-done'></span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-          0% complete
+          <span class='progress-meter'><span class='progress-meter-done'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+          14% complete
           </td>
           </tr><tr><td></td><td>
-          0 / 7 issues.
+          1 / 7 issues.
           <a href="release-1.17.html">See issues &raquo;</a>
         
         </td>
@@ -61,7 +61,7 @@
 
 <p>
   
-    <a href="unassigned.html">30 unassigned issues</a> (22 open).
+    <a href="unassigned.html">32 unassigned issues</a> (24 open).
   
 </p>
 
@@ -73,6 +73,33 @@
   <tbody>
   
     <tr class="even-row">
+      <td class="date">2009-12-02</td>
+      <td class="issuename">
+        <a href="issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.html">Printing problem with \commutator</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
+      <td class="date">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-c6f19ea6617d8186461181296226988ae7111708.html">Numerical indices default to position=free.</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="even-row">
+      <td class="date">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-d3968c05090854806ec986d696e99a887d458b18.html">Fix dependence on numbers</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
       <td class="date">2009-11-16</td>
       <td class="issuename">
         <a href="issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.html">Deleting last cell of notebook sometimes produces warnings</a> 
@@ -81,16 +108,16 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-11-16</td>
       <td class="issuename">
-        <a href="issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.html">Printing problem with \commutator</a> 
+        <a href="issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.html">Printing problem with \commutator</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
       </td>
       <td> created </td>
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-11-14</td>
       <td class="issuename">
         <a href="issue-9258c825583707f6bf901795c9d4e2a82f13e0d3.html">Depends property overwrites earlier ones.</a> 
@@ -99,7 +126,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-11-14</td>
       <td class="issuename">
         <a href="issue-1040b3b57b849b9b2cc8fee189ecb0df52544a75.html">Varying does not handle single-factor terms.</a> 
@@ -108,7 +135,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-11-14</td>
       <td class="issuename">
         <a href="issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html">Expanding fractional powers fails.</a> 
@@ -117,7 +144,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-11-14</td>
       <td class="issuename">
         <a href="issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.html">Accented tensors fail to print</a> 
@@ -126,37 +153,10 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-09-02</td>
       <td class="issuename">
         <a href="issue-9c8f132023a13bdea10ef87e26d37d681705a8d1.html">Derivatives of sums do not always display correctly in notebook</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-08-23</td>
-      <td class="issuename">
-        <a href="issue-4dce789d9676fe7d510b0489a82f68ce21749c73.html">Dividing active cell does not work anymore</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
-      </td>
-      <td> closed with disposition fixed </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="even-row">
-      <td class="date">2009-08-23</td>
-      <td class="issuename">
-        <a href="issue-1c7bc5e7512020226c1ca90fb249cab7886b6833.html">Implicit indices need to come in normal and conjugate forms.</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-08-23</td>
-      <td class="issuename">
-        <a href="issue-ada88ddc28be6f0f3567fc2d0f50fb3dc64a37b4.html">@fierz does not produce useful error messages.</a> 
       </td>
       <td> created </td>
     </tr>
