@@ -20,6 +20,36 @@
   
     <tr>
       <td>  </td>
+      <td class="littledate">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-c6f19ea6617d8186461181296226988ae7111708.html">Numerical indices default to position=free.</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
+      <td class="littledate">2009-11-18</td>
+      <td class="issuename">
+        <a href="issue-d3968c05090854806ec986d696e99a887d458b18.html">Fix dependence on numbers</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
       <td class="littledate">2009-08-23</td>
       <td class="issuename">
         <a href="issue-1c7bc5e7512020226c1ca90fb249cab7886b6833.html">Implicit indices need to come in normal and conjugate forms.</a>
