@@ -1,3 +1,7 @@
+2009-12-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed display of commutators (duplicate second part).
+
 2009-08-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed compilation problem on OS X.
